srs/service-nodeport-srs.yaml
apiVersion: v1
kind: Service
metadata:
  name: srs-nodeport
  labels:
    app: srs
spec:
  type: NodePort
  ports:
  - port: 1935
    targetPort: 1935
    protocol: TCP
    name: rtmp
    nodePort: 31935
  - port: 1985
    targetPort: 1985
    protocol: TCP
    name: api
    nodePort: 31985
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
    nodePort: 30080
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: webrtc
    nodePort: 30000
  - port: 5060
    targetPort: 5060
    protocol: UDP
    name: gb28181
    nodePort: 30060
  selector:
    app: srs
