srs/service-srs-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: srs-cluster-headless
  labels:
    app: srs-cluster
spec:
  clusterIP: None
  ports:
  - port: 1935
    name: rtmp
  - port: 1985
    name: api
  - port: 8080
    name: http
  - port: 8000
    name: webrtc
  - port: 5060
    name: gb28181
    protocol: UDP
  selector:
    app: srs-cluster
---
apiVersion: v1
kind: Service
metadata:
  name: srs-cluster-lb
  labels:
    app: srs-cluster
spec:
  type: LoadBalancer
  ports:
  - port: 1935
    targetPort: 1935
    name: rtmp
  - port: 1985
    targetPort: 1985
    name: api
  - port: 8080
    targetPort: 8080
    name: http
  - port: 8000
    targetPort: 8000
    name: webrtc
  - port: 5060
    targetPort: 5060
    name: gb28181
    protocol: UDP
  selector:
    app: srs-cluster
