srs/service-srs.yaml
apiVersion: v1
kind: Service
metadata:
  name: srs-service
  labels:
    app: srs
spec:
  type: ClusterIP
  ports:
  - port: 1935
    targetPort: 1935
    protocol: TCP
    name: rtmp
  - port: 1985
    targetPort: 1985
    protocol: TCP
    name: api
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: webrtc
  - port: 5060
    targetPort: 5060
    protocol: UDP
    name: gb28181
  selector:
    app: srs
